in my files, file names are now abbreviated if too long; unabbreviated on focus, abbreviated back on blur, no longer abbreviated/un.. when edited

--- a/app/assets/stylesheets/note_files.scss
+++ b/app/assets/stylesheets/note_files.scss
@@ -30,7 +30,6 @@
 
 .filename-checkbox {
   vertical-align: middle;
-  margin-right: 10px;
 }
 
 .filename-checkbox input{
@@ -42,18 +41,13 @@
   display: inline-block;
   padding: 2px 4px;
   font-size: 13px; 
-  vertical-align:20%;
+  vertical-align:middle;
   border-radius: 3px;
   box-shadow: 2px 2px 6px #555555;
-  max-width: 100px;
-}
-
-.small-text{
-  max-width: 100px;
+  max-width: 115px;
   border: none;
-  overflow: hidden;
   max-height: 50px;
-  word-wrap: break-word; 
+  margin: 10px 5px 10px 5px;
 }
 
 .file-even .small-text{
